--- a/untitled1.ipynb
+++ b/untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx3iKiA/kg3mTwYTrEdkaF",
+      "authorship_tag": "ABX9TyPuriK4lCcbl00KR342v2Ff",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -98,17 +98,68 @@
     {
       "cell_type": "code",
       "source": [
-        "scam_keywords = [\n",
-        "    \"urgent\", \"lottery\", \"won\", \"click\",\n",
-        "    \"verify\", \"blocked\", \"otp\", \"prize\", \"bank\"\n",
-        "]\n",
+        "import re\n",
+        "import math\n",
+        "def extract_nlp_features(text: str):\n",
+        "    text = text.lower()\n",
         "\n",
-        "def detect_scam(message: str):\n",
-        "    score = 0\n",
-        "    for word in scam_keywords:\n",
-        "        if word in message.lower():\n",
-        "            score += 1\n",
-        "    return score >= 2"
+        "    features = {\n",
+        "        \"urgency\": len(re.findall(r\"urgent|immediately|act now\", text)),\n",
+        "        \"reward\": len(re.findall(r\"won|prize|lottery|reward\", text)),\n",
+        "        \"threat\": len(re.findall(r\"blocked|suspended|legal action\", text)),\n",
+        "        \"credentials\": len(re.findall(r\"otp|pin|password|cvv\", text)),\n",
+        "        \"money\": len(re.findall(r\"pay|transfer|upi|bank\", text)),\n",
+        "        \"links\": len(re.findall(r\"http|www|bit.ly|tinyurl\", text))\n",
+        "    }\n",
+        "    return features\n",
+        "    def behavioral_anomaly_score(features: dict):\n",
+        "     score = 0\n",
+        "\n",
+        "    score += features[\"urgency\"] * 1.5\n",
+        "    score += features[\"reward\"] * 1.2\n",
+        "    score += features[\"threat\"] * 1.8\n",
+        "    score += features[\"credentials\"] * 2.5\n",
+        "    score += features[\"money\"] * 2.0\n",
+        "    score += features[\"links\"] * 1.7\n",
+        "\n",
+        "    return score\n",
+        "    def fraud_risk_engine(message: str):\n",
+        "     features = extract_nlp_features(message)\n",
+        "    anomaly_score = behavioral_anomaly_score(features)\n",
+        "\n",
+        "    # Normalize risk score (0–100)\n",
+        "    risk_score = min(100, int((1 - math.exp(-anomaly_score)) * 100))\n",
+        "\n",
+        "    if risk_score >= 70:\n",
+        "        label = \"SCAM\"\n",
+        "    elif risk_score >= 40:\n",
+        "        label = \"SUSPICIOUS\"\n",
+        "    else:\n",
+        "        label = \"SAFE\"\n",
+        "\n",
+        "    return {\n",
+        "        \"risk_score\": risk_score,\n",
+        "        \"classification\": label,\n",
+        "        \"features_detected\": features\n",
+        "    }\n",
+        "    @app.post(\"/user/check-scam\")\n",
+        "    def check_scam(data: UserMessage):\n",
+        "     result = fraud_risk_engine(data.message)\n",
+        "\n",
+        "    if result[\"classification\"] == \"SCAM\":\n",
+        "        return {\n",
+        "            \"scam_detected\": True,\n",
+        "            \"risk_score\": result[\"risk_score\"],\n",
+        "            \"reason\": result[\"features_detected\"],\n",
+        "            \"action\": \"Alert police AI system\"\n",
+        "        }\n",
+        "    else:\n",
+        "        return {\n",
+        "            \"scam_detected\": False,\n",
+        "            \"risk_score\": result[\"risk_score\"],\n",
+        "            \"status\": result[\"classification\"]\n",
+        "        }\n",
+        "\n"
       ],
       "metadata": {
         "id": "ExZ3Eux9Qu2O"
@@ -135,10 +186,27 @@
         "        }"
       ],
       "metadata": {
-        "id": "D8hsJpiOQ6cq"
+        "id": "D8hsJpiOQ6cq",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 211
+        },
+        "outputId": "3b003249-b7db-4815-9e2a-263fd532976c"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'app' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-403062612.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m@\u001b[0m\u001b[0mapp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/check-scam\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcheck_scam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mUserMessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mis_scam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdetect_scam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mis_scam\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'app' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
